<resources>
    <string name="app_name">Banco Digital</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_passoword_empty">Digite sua senha</string>
    <string name="generic_error">Ocorreu um erro. Tente novamente mais tarde.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bem-vindo(a)</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="password">Senha</string>
    <string name="recover_account">Recuperar conta</string>
    <string name="to_enter">Entrar</string>
    <string name="no_count">Não possui conta?</string>
    <string name="register_login">Cadastre-se</string>
    <string name="email_recovery_message">Informe seu e-mail de cadastro para receber um link para alterar a senha.</string>
    <string name="to_send">Enviar</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register_signup">Cadastrar</string>

    <!--    Bottom Sheet-->
    <string name="title_bottom_sheet">Atenção</string>
    <string name="text_button_botton_sheet">Fechar</string>

    <!--    Recover Account-->
    <string name="text_message_send_email_success">E-mail enviado.</string>

    <!--    Firebase Auth Errors-->
    <string name="account_not_registered">Nenhuma conta encontrada para este e-mail.</string>
    <string name="invalid_email">Insira um e-mail válido.</string>
    <string name="invalid_password">Senha inválida.</string>
    <string name="email_in_use">Este e-mail já está em uso.</string>
    <string name="strong_password">Insira uma senha mais forte.</string>
</resources>